Added memprof endpoint & bunch of updates (#1192)
* Added memprof endpoint & bunch of updates

* Fix linter errors

* Fix linter error
