# api/internal/models/state.go
@@ -1,12 +1,14 @@
 package models
 
 type State struct {
-	IsMaintenance    bool `json:"isMaintenance"`
-	IsDatabaseActive bool `json:"isDatabaseActive"`
+	IsMaintenance       bool `json:"isMaintenance"`
+	IsDatabaseActive    bool `json:"isDatabaseActive"`
+	IsMemoryProfEnabled bool `json:"isMemoryProfEnabled"`
 } //	@name	State
 
 type StateKey string
 
 const (
-	IsMaintenanceKey StateKey = "IsMaintenance"
+	IsMaintenanceKey       StateKey = "IsMaintenance"
+	IsMemoryProfEnabledKey StateKey = "IsMemoryProfEnabled"
 )
